flexc++ (2.03.04) NOT YET TAGGED

  * 'build install' uses an optional -l argument: the (relative or
    absolute) path to the logfile to use. The environment variable BISONCPP is
    no longer used.


flexc++ (2.03.03)

  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
    than 'cd'. Fixed in this release.

  * Kevin Brodsky also observed that the combined size of all precompiled 
    headers might exceed some disks capacities. The option -P was added to the
    ./build script to prevent the use of precompiled headers.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 20:24:26 +0200

flexc++ (2.03.02)

  * Reimplemented the (un)installation procedures

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 02 Oct 2015 11:03:20 +0200

flexc++ (2.03.01)

  * 'build manual' creates the manual when its called. If the manual already
    exists, it is recreated. Same holds true for 'build man'

  * Flexc++'s compilation now uses precompiled headers

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 28 Sep 2015 18:48:43 +0200

flexc++ (2.03.00)

  * Fixed a bug in handling {0, x} intervals: encountered by Guillaume
    Endignoux. 

  * Guillaume also detected a bug in handling \x escape sequences in character
    classes, e.g., [\x30-\x38]. That problem was not caused by handling the
    escape sequence, but by handling concatenation of regular expressions. The
    parser/inc/regexoreof file now contains an additional rule _regex_unit,
    which handles the regex _units, possibly quantified, and their
    concatenations, while _regex handles a _regex_unit and the operators | and
    / that can be used to combine regular expressions. 

  * Guillame found an input file causing a continuous loop within
    flexc++. This bug was fixed by terminating flexc++ at the final end of its
    input streams.

  * The //include filename facility was not recognized in previous
    releases. It's now supported (cf. man flexc++input, FILE SWITCHING)
