@@ -147,9 +147,9 @@ void main(int argc, list argv)
         "                         or a combination of:\n"
         "                               b (binary program),\n"
         "                               d (documentation),\n"
-        "                               h (header files),\n"
-        "                               l (libraries),\n"
         "                               m (man-pages)\n"
+        "                               s (skeleton files),\n"
+        "                               u (user guide),\n"
         "   uninstall logfile   - remove files and empty directories listed\n"
         "                         in the file 'logfile'\n"
         "   github               - prepare github's gh-pages update\n"
