@@ -1,4 +1,4 @@
-// Generated by Flexc++ V2.04.00 on Fri, 25 Sep 2015 09:20:16 +0200
+// Generated by Flexc++ V2.03.00 on Wed, 28 Oct 2015 11:47:39 +0100
 
 #ifndef ScannerBASE_H_INCLUDED
 #define ScannerBASE_H_INCLUDED
@@ -201,6 +201,7 @@ public:
 protected:
     ScannerBase(std::istream &in, std::ostream &out);
     ScannerBase(std::string const &infilename, std::string const &outfilename);
+    ~ScannerBase();
 
     StartCondition__  startCondition() const;   // current start condition
     bool            popStream();
@@ -272,6 +273,11 @@ private:
     static StartCondition__ constexpr SC(int sc);
     static int constexpr SC(StartCondition__ sc);
 };
+
+inline ScannerBase::~ScannerBase()
+{
+    d_input.close();
+}
 
 template <typename ReturnType, typename ArgType>
 inline ReturnType constexpr ScannerBase::as(ArgType value)
